Added new files

--- a/staff-login.html
+++ b/staff-login.html
@@ -1,8 +1,3 @@
-<?php
-    include "connection.php";
-    include "navbar.php";
-?>
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -24,16 +19,35 @@
     </style> 
 </head>
 <body>
-    
- 
+       
 
- <section>
+            <nav class="navbar navbar-inverse">
+              <div class="contain-fluid">
+                <div class="navbar-header">    
+                 <a class="navbar-brand active">RONO FARM LTD</a>
+                </div> 
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="products.html">PRODUCTS</a></li>                    
+                    <li><a href="">MESSAGE</a></li>
+                </ul>
+
+                <ul class="nav navbar-nav navbar-right">
+
+                    <li><a href="staff-login.html"><span class="glyphicon glyphicon-log-in"> LOGIN</span></a></li>
+                    <li><a href="staff-login.html"><span class="glyphicon glyphicon-log-out"> STAFF-LOGOUT</span></a></li>
+                    <li><a href="registration.html"><span class="glyphicon glyphicon-user"> SIGNUP</span></a></li>
+                </ul>
+              </div>
+            </nav>
+
+<section>
    <div class="log_img">
     <br><br><br>
     <div class="box1">
         <h1 style="text-align: center; font-size: 35px;font-family: 'Times New Roman', Times, serif;"> RONO FARM Ltd</h1>
         <h1 style="text-align: center; font-size: 25px;">Staff Login Form</h1>
-        <form style="text-align: center;" name="login" action="" method="post">
+        <form style="text-align: center;" name="login" action="" method="">
             <input class="form-control" type="text" name="username" placeholder="Username" required=""> <br>
             <input class="form-control" type="password" name="password" placeholder="Password" required=""> <br>
             <input class="btn btn-default" type="submit" name="submit" value="Login" style="color: black; width: 60px; height: 30px;">
@@ -47,42 +61,7 @@
     </div>
 
    </div> 
- </section>
+</section>
 
-      <?php
-
-       if(isset($_POST['submit']))
-     {
-        $count=0;
-        $res=mysqli_query($db,"SELECT * FROM `admin` WHERE username='$_POST[username]' && password='$_POST[password]';");
-        $count=mysqli_num_rows($res);
-
-        if($count==0)
-       {
-         ?>
-           <!--
-            <script type="text/javascript">
-                alert("The username and password doesn't match.");
-            </script>
-            -->
-            <div class="alert alert-danger" style="width: 500px; margin-left: 500px; text-align: center;">
-                <strong>The username and password doesn't match.</strong>
-            </div>
-          <?php
-        }
-          else  
-        {
-            $_SESSION['login_user'] = $_POST['username'];
-
-            ?>
-                <script type="text/javascript">
-                  window.location="index.php"  
-                </script>
-            <?php
-        }
-     }    
-
-  ?>
-  
 </body>
 </html>
