--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<?php
-	session_start();
-?>
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <style type="text/css">
 	nav
@@ -34,54 +32,34 @@
 			<img src="images/logo.png">
 			<h1 style="color: black;">RONO FARM LTD</h1>
 		</div>
-
-		<?php
-		if(isset($_SESSION['login_user']))
-		{
-			?>
-				<nav>
-					<ul>
-						<li><a href="index.php">HOME</a></li>
-						<li><a href="products.php">PRODUCTS</a></li>
-						<li><a href="loginout.php">LOGOUT</a></li>
-						<li><a href="message.php">MESSAGE</a></li>
-					</ul>
-				</nav>
-			<?php
-		}
-		else
-		{
-			?>
-				<nav>
-					<ul>
-						<li><a href="index.php">HOME</a></li>
-						<li><a href="products.php">PRODUCTS</a></li>
-						<li><a href="admin-login.php">ADMIN-LOGIN</a></li>
-						<li><a href="message.php">MESSAGE</a></li>
-					</ul>
-				</nav>	
-		<?php
-		}
-		?>	
-		
-		
+			<nav>
+				<ul>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="products.html">PRODUCTS</a></li>
+					<li><a href="staff-login.html">STAFF-LOGIN</a></li>
+					<li><a href="adminlogin.html">ADMIN-LOGIN</a></li>
+					<li><a href="shop.php">SHOP</a></li>
+				</ul>
+			</nav>
 		</header>
 		<section>
 		<div class="sec_img">
 			<br><br><br>
+
 			<div class="box">
-				<br><br><br><br>
-				<h1 style="text-align: center; font-size: 35px;">Welcome!!</h1><br><br>
+				<br><br>
+				<h1 style="text-align: center; font-size: 35px;">Welcome!!</h1><br>
 				<h1 style="text-align: center;font-size: 25px;">Opens at: 09:00 </h1><br>
 				<h1 style="text-align: center;font-size: 25px;">Closes at: 15:00 </h1><br>
 			</div>
+
 		</div>
 		</section>
 		<footer>
 			<p style="color:white;  text-align: center; ">
-				<br><br>
+				<br>
 				Email:&nbsp; RONO.Ltd@gmail.com <br>
-				Mobile:&nbsp; &nbsp; 0701621276
+				Mobile:&nbsp; &nbsp; 0701621276 <br>
 			</p>
 		</footer>
 	</div>
